--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -35,13 +35,13 @@
                         <span class="nav-link-text">Dashboard</span>
                     </a>
                 </li>
-                <li class="nav-item" id="Owners" data-toggle="tooltip" runat="server" data-placement="right" title="Owners">
+                <li class="nav-item" id="OwnersMenu" data-toggle="tooltip" runat="server" data-placement="right" title="Owners">
                     <a class="nav-link" href="../Admin/Owners.aspx">
                         <i class="fa fa-fw fa-users"></i>
                         <span class="nav-link-text">Owners</span>
                     </a>
                 </li>
-                
+
                 <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Expenditures">
                     <a class="nav-link" href="../Admin/Expenditure.aspx">
                         <i class="fa fa-fw fa-file-text"></i>
@@ -53,6 +53,23 @@
                         <i class="fa fa-fw fa-address-book"></i>
                         <span class="nav-link-text">Investors</span>
                     </a>
+                </li>
+                <li class="nav-item" id="MemberMenu" runat="server" data-toggle="tooltip" data-placement="right" title="Members">
+                    <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
+                        <i class="fa fa-fw fa-address-book"></i>
+                        <span class="nav-link-text">Members</span>
+                    </a>
+                    <ul class="sidenav-second-level collapse" id="collapseComponents">
+                        <li>
+                            <a href="../Admin/Members.aspx">Members List</a>
+                        </li>
+                        <li>
+                            <a href="../Admin/MemberRequests.aspx">Member Requests</a>
+                        </li>
+                        <li>
+                            <a href="../Admin/MemberHalts.aspx">Member Halts</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
             <ul class="navbar-nav sidenav-toggler">
