--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -86,31 +86,31 @@
                             <asp:Label ID="LabelUserName" runat="server"></asp:Label>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
+                            <a class="dropdown-item" href="#">
+                                <i class="fa fa-fw fa-user"></i>Profile
+                            </a>
+                            <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <i class="fa fa-fw fa-sign-out"></i>Logout
+                            </a>
                         </div>
                     </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" data-toggle="modal" data-target="#logoutModal">
-                        <i class="fa fa-fw fa-sign-out"></i>Logout</a>
                 </li>
             </ul>
         </div>
     </nav>
     <div class="content-wrapper">
-        <%--        <form id="form1" runat="server">--%>
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
-        <%--        </form>--%>
         <!-- /.content-wrapper-->
         <footer class="sticky-footer">
             <div class="container">
-                <div class="text-center">
+                <div class="float-left">
                     <small>Copyright © Islah Group <% Response.Write(DateTime.Now.Year); %></small>
+                </div>
+                <div class="float-right">
+                    <small>Developed with </small><i class="fa fa-fw fa-heart text-danger"></i> <small>treebricks</small>
                 </div>
             </div>
         </footer>
