--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -5,6 +5,7 @@
 <html>
 <head runat="server">
     <meta charset="utf-8">
+    <link rel="icon" href="../Images/favicon.ico">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -71,6 +72,12 @@
                         </li>
                     </ul>
                 </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Investors">
+                    <a class="nav-link" href="../Admin/Management.aspx">
+                        <i class="fa fa-fw fa-cogs"></i>
+                        <span class="nav-link-text">Management</span>
+                    </a>
+                </li>
             </ul>
             <ul class="navbar-nav sidenav-toggler">
                 <li class="nav-item">
@@ -110,7 +117,7 @@
                     <small>Copyright © Islah Group <% Response.Write(DateTime.Now.Year); %></small>
                 </div>
                 <div class="float-right">
-                    <small>Developed with </small><i class="fa fa-fw fa-heart text-danger"></i> <small>treebricks</small>
+                    <small>Developed with </small><i class="fa fa-fw fa-heart text-danger"></i><small>treebricks</small>
                 </div>
             </div>
         </footer>
