--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -72,7 +72,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Investors">
+                <li class="nav-item" id="ManagementMenu" runat="server" data-toggle="tooltip" data-placement="right" title="Investors">
                     <a class="nav-link" href="../Admin/Management.aspx">
                         <i class="fa fa-fw fa-cogs"></i>
                         <span class="nav-link-text">Management</span>
