--- a/IslahGroup/Masters/AdminSite.Master
+++ b/IslahGroup/Masters/AdminSite.Master
@@ -93,7 +93,7 @@
                             <asp:Label ID="LabelUserName" runat="server"></asp:Label>
                         </a>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="../Admin/Profile.aspx">
                                 <i class="fa fa-fw fa-user"></i>Profile
                             </a>
                             <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
