--- a/IslahGroup/Masters/CMSMaster.Master
+++ b/IslahGroup/Masters/CMSMaster.Master
@@ -24,21 +24,15 @@
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-        <a class="navbar-brand" href="../Admin/Dashboard.aspx">Islah Group</a>
+        <a class="navbar-brand" href="../CMS/Carousel.aspx">Islah Group CMS</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-                    <a class="nav-link" id="DashboardLink" runat="server" href="../CMS/Default.aspx">
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Carousel">
+                    <a class="nav-link" id="DashboardLink" runat="server" href="../CMS/Carousel.aspx">
                         <i class="fa fa-fw fa-dashboard"></i>
-                        <span class="nav-link-text">Dashboard</span>
-                    </a>
-                </li>
-                <li class="nav-item" id="Li2" data-toggle="tooltip" runat="server" data-placement="right" title="Carousel">
-                    <a class="nav-link" href="../CMS/Carousel.aspx">
-                        <i class="fa fa-fw fa-users"></i>
                         <span class="nav-link-text">Carousel</span>
                     </a>
                 </li>
